# MultiRobot

./: .gitignore  Presentation.pptx  README.md  umlDrawDotIoMR.xml
code/: CMakeLists.txt
code/build_osx/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
code/build_osx/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/build_osx/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/build_osx/googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/build_osx/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/build_osx/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
code/build_osx/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/build_osx/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/src/: AgentManager.cpp  AgentManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Environment.cpp  Environment.hpp  Gaussian.cpp  Gaussian.hpp
code/src/utils/: Drawer.cpp  Drawer.hpp  MyMath.cpp  MyMath.hpp
code/tests/: CMakeLists.txt  Starter.cpp  TestCentrQuant.cpp  TestDrawVoronoi.cpp  TestFull.cpp  TestFullAlterned.cpp  TestFullMultiEvent.cpp  TestFullSlanted.cpp  TestOneCam.cpp
